--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,52 @@
-# Core dependencies
+# Core Dependencies
 aiohttp>=3.8.0
-asyncio>=3.4.3
+asyncio-throttle>=1.0.0
 numpy>=1.21.0
 scikit-learn>=1.0.0
-python-dotenv>=0.19.0
+pydantic>=1.10.0
+
+# Web scraping and content extraction
+beautifulsoup4>=4.11.0
+lxml>=4.9.0
 
 # PDF processing
 PyPDF2>=3.0.0
 pdfplumber>=0.7.0
 
-# HTML parsing
-beautifulsoup4>=4.10.0
-lxml>=4.6.0
+# CSV/Excel processing
+pandas>=1.5.0
+openpyxl>=3.0.0
+papaparse>=0.7.0  # Note: This is typically a JS library, may need python-papaparse
 
-# Optional: Enhanced user agent rotation
-fake-useragent>=1.1.0
+# HTTP requests and fake user agents
+requests>=2.28.0
+fake-useragent>=1.2.0
 
-# Optional: Better tokenization (if available)
-tiktoken>=0.3.0
+# ChromaDB for local knowledge base
+chromadb>=0.4.0
 
-# Data processing
-pandas>=1.3.0
-matplotlib>=3.5.0
+# Text processing and NLP
+tiktoken>=0.4.0  # For accurate token counting
+html2text>=2020.1.16  # Alternative HTML to text conversion
 
-# Development dependencies (optional)
-pytest>=6.0.0
-black>=22.0.0
-flake8>=4.0.0
+# Data manipulation and analysis
+scipy>=1.9.0
+
+# Environment and configuration
+python-dotenv>=0.19.0
+
+# Optional: Enhanced JSON processing
+ujson>=5.4.0
+
+# Optional: Progress bars and CLI enhancements
+tqdm>=4.64.0
+rich>=12.0.0
+
+# Optional: Better async handling
+aiofiles>=0.8.0
+
+# Development dependencies (uncomment if needed)
+# pytest>=7.0.0
+# pytest-asyncio>=0.21.0
+# black>=22.0.0
+# flake8>=5.0.0
