--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pdfplumber>=0.7.0
 # CSV/Excel processing
 pandas>=1.5.0
 openpyxl>=3.0.0
-papaparse>=0.7.0  # Note: This is typically a JS library, may need python-papaparse
 
 # HTTP requests and fake user agents
 requests>=2.28.0
@@ -44,7 +43,8 @@ rich>=12.0.0
 
 # Optional: Better async handling
 aiofiles>=0.8.0
-
+openai
+spacy
 # Development dependencies (uncomment if needed)
 # pytest>=7.0.0
 # pytest-asyncio>=0.21.0
